--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,32 @@
 
         <variable
             name="activity"
-            type="cn.ben.googletraininginteractingwithapp.MainActivity" />
+            type="cn.ben.googletraininginteractingwithapp.MainActivity"/>
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="cn.ben.googletraininginteractingwithapp.MainActivity">
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/activity_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    tools:context="cn.ben.googletraininginteractingwithapp.MainActivity">
+
+        <Button
+            android:id="@+id/btn_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/build_an_implicit_intent"
+            app:onClickListener="@{activity.buildImplicitIntentOnClickListener}"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/build_an_implicit_intent"
-            app:onClickListener="@{activity.buildImplicitIntentOnClickListener}" />
+            android:layout_below="@id/btn_1"
+            android:text="@string/start_activity_for_result"
+            app:onClickListener="@{activity.startActivityForResultOnClickListener}"/>
     </RelativeLayout>
 </layout>
